# misis2024s-23-18-shvarts-v-a

./: .gitignore  CMakeLists.txt  codeforces.id  reports.md  status.md
enc_temp_folder/7d81f3503fee7ba57b8b8789024f2db/: queuearr.cpp
enc_temp_folder/b7727d3749888185d9b7d3101f0be9/: queuearr.hpp
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  input.txt  robocalc.cpp
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.codeforces/: 0001a.cpp  0069a.cpp  0136a.cpp  0158a.cpp  0158b.cpp  0282a.cpp  0467a.cpp  1030a.cpp  1669a.cpp  1669b.cpp  1669c.cpp  1669e.cpp  1760b.cpp  1760c.cpp  1807a.cpp  1807b.cpp  1807d.cpp  1829a.cpp  1829b.cpp  1829c.cpp  1829d.cpp  1850a.cpp  1850b.cpp  1850c.cpp  1850d.cpp  1873a.cpp  1873b.cpp  1902a.cpp  1915a.cpp  1915b.cpp  1915c.cpp  1915d.cpp  1926a.cpp  1926b.cpp  1926c.cpp  1926e.cpp  1930a.cpp  1930c.cpp  1932a.cpp  1932c.cpp  (+11 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstp/: CMakeLists.txt  queuelstp.cpp  queuelstp.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_complex_doctest.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstp.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_rational.cpp  test_stack.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  vector.hpp
