add_executable(0282a 0282a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(0467a 0467a.cpp)
add_executable(0136a 0136a.cpp)
add_executable(1930a 1930a.cpp)
add_executable(1930c 1930c.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1915b 1915b.cpp)
add_executable(1915c 1915c.cpp)
add_executable(1915d 1915d.cpp)
add_executable(1932a 1932a.cpp)
add_executable(1932c 1932c.cpp)
add_executable(1932e 1932e.cpp)
add_executable(1926a 1926a.cpp)
add_executable(1926b 1926b.cpp)
add_executable(1926e 1926e.cpp)