add_executable(0282a 0282a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(0467a 0467a.cpp)
add_executable(0136a 0136a.cpp)
add_executable(1930a 1930a.cpp)
add_executable(1930c 1930c.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1915b 1915b.cpp)
add_executable(1915c 1915c.cpp)
add_executable(1915d 1915d.cpp)
add_executable(1932a 1932a.cpp)
add_executable(1932c 1932c.cpp)
add_executable(1932e 1932e.cpp)
add_executable(1926a 1926a.cpp)
add_executable(1926b 1926b.cpp)
add_executable(1926e 1926e.cpp)
add_executable(1926c 1926c.cpp)
add_executable(1933a 1933a.cpp)
add_executable(1873a 1873a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1850a 1850a.cpp)
add_executable(1850b 1850b.cpp)
add_executable(1850c 1850c.cpp)
add_executable(1850d 1850d.cpp)
add_executable(0001a 0001a.cpp)
add_executable(0069a 0069a.cpp)
add_executable(1952a 1952a.cpp)
add_executable(1952b 1952b.cpp)
add_executable(1950a 1950a.cpp)
add_executable(1951a 1951a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0158b 0158b.cpp)
add_executable(1955a 1955a.cpp)
add_executable(1950c 1950c.cpp)
add_executable(1950b 1950b.cpp)
#add_executable(1950d 1950d.cpp)
add_executable(1829a 1829a.cpp)
add_executable(1829b 1829b.cpp)
add_executable(1829c 1829c.cpp)
add_executable(1669a 1669a.cpp)
add_executable(1669b 1669b.cpp)
add_executable(1669c 1669c.cpp)
add_executable(1669e 1669e.cpp)
add_executable(1807a 1807a.cpp)
add_executable(1807b 1807b.cpp)
add_executable(1807d 1807d.cpp)